# SUPA-EEG

./: .gitignore  EEG_DATA.md  README.md  data_pipeline_example.ipynb  demo.py  dvc.yaml  params.yaml  pyproject.toml  requirements-visual-encoder.txt  train.py  viz.ipynb  viz_model.ipynb  viz_thingeeg.ipynb
.dvc/: config
conf/: config.yaml  full_channels.yaml
conf/model/: eegnet.yaml  llmfew.yaml  mlp_sd.yaml  supaeeg.yaml
configs/: config.yaml
configs/model/: dt.yaml  eeg_transformer.yaml  eegnet.yaml  jepa.yaml  knn.yaml  llm_encoder.yaml  mlp.yaml  mlp_sd.yaml  qwen_encoder.yaml  rf.yaml  rgnn.yaml  ridge.yaml  semantic.yaml  semantic_triplet.yaml  svm.yaml
data/: EEG-ImageNet.pth.dvc
data/de_feat/: 0_coarse_de.npy.dvc
data/things_eeg_63/: image_feature  test_images  training_images
docs/: lucidchart_spec.md  pipeline_diagrams.md  topk_retrieval_metrics.md
notebooks/: data_pipeline_example.ipynb
reports/: Experiment.md  eegnet_encoder  exp7_wrong_prediction_analysis.tex  experiment.md  experiment_baseline.md  subject_aware_router  supaeeg_model
scripts/: aggregate_dvc_results.py  analyze_errors.py  download_data.sh  download_dataset.sh  download_dataset_full.sh  download_unprocessed_data.sh  ensure_internvit_features.py  exp_bounded_suite.sh  exp_difference_seed.sh  exp_higher_sampling.sh  exp_share_encoder.sh  extract_internvit_features.py  extract_visual_features.py  inspect_feature_bank.py  preprocess_all_subject.sh  preprocess_data.py  save_embeddings.py  visualize_inter_retrieval.py
src/: blip_clip.py  dataset.py  de_feat_cal.py  gen_eval.py  gen_img_list.py  image_generation.py  jepa_poc_train.py  object_classification.py  test_dataset.py  train.py  utilities.py
src/encoders/: __init__.py  eeg_ablation_encoders.py  eeg_augmentation.py  eegnet_encoder.py  utilities.py  vision_encoder.py  visual_encoder.py
src/model/: eeg_transformer.py  eegnet.py  jepa.py  llm_encoder.py  llmfew.py  mlp.py  qwen_encoder.py  rgnn.py  semantic.py  semantic_triplet.py  simple_model.py  visual_encoder.py
tests/: test_metrics.py  test_train_subject_ids.py
(+19 files in other folders)
