[project]
name = "eeg-imagenet-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "torch==2.9.1",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torchvision>=0.24.1",
    "transformers>=5.4.0",
]
