[project]
name = "supa_eeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "dvc>=3.67.0",
    "dvc-oss>=3.0.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "torch==2.9.1",
    "torch-geometric>=2.7.0",
    "torchvision>=0.24.1",
    "transformers>=5.4.0",
    "peft>=0.15.0",
    "ipykernel>=7.2.0",
    "mne-connectivity>=0.8",
    "ipywidgets>=8.1.8",
    "ipyevents>=2.0.4",
    "trame>=3.12.0",
    "trame-vtk>=2.11.6",
    "trame-vuetify>=3.2.1",
    "loguru>=0.7.3",
    "timm>=1.0.27",
    "huggingface-hub>=1.8.0",
    "safetensors>=0.7.0",
    "pyvistaqt>=0.11.4",
    "typer>=0.24.1",
    "pytest>=9.0.3",
    "tensorboard>=2.20.0",
    "torchview>=0.2.7",
]

[project.optional-dependencies]
flash = [
    "einops>=0.8.2",
    "flash-attn>=2.8.3",
]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
